[package]
name = "leptos-ssr-only"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7" }
leptos = { version = "0.7.0-rc1" } # also works if add `ssr` feature
leptos_axum = { version = "0.7.0-rc1" }
#
tokio = { version = "1", features = ["rt-multi-thread"] }
#

[profile.release]
opt-level = 3
lto = true
codegen-units = 12
panic = "abort"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
codegen-units = 1

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "leptos-ssr-only"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["server"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
