[workspace]
resolver = "2"
members = ["api", "server"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["tetuaoro <65575727+tetuaoro@users.noreply.github.com>"]

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = { version = "0.7.7" }
leptos_axum = { version = "0.7.7" }

axum = "0.7"
tokio = { version = "1.33.0", features = ["full"] }

# run cargo build --package=server --no-default-features --features=ssr
[[workspace.metadata.leptos]]
name = "serveronly"
