[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }

server_fn = "0.7.7"
leptos_config = "0.7.7"
reactive_graph = "0.1.8"
leptos_axum.workspace = true

log = "0.4"
simple_logger = { version = "5.0.0", default-features = false, features = [
    "colors",
] }

axum.workspace = true
tokio.workspace = true
